--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"eslint-plugin-prettier": "^4.2.1",
 		"eslint-plugin-react": "^7.32.2",
 		"eslint-plugin-react-hooks": "^4.6.0",
+		"eslint-plugin-storybook": "^0.11.1",
 		"html-webpack-plugin": "^5.5.1",
 		"husky": "^8.0.3",
 		"lint-staged": "^13.2.2",
@@ -54,7 +55,7 @@
 		"typescript": "^5.0.4",
 		"typescript-plugin-css-modules": "^5.0.1",
 		"url-loader": "^4.1.1",
-		"webpack": "^5.81.0",
+		"webpack": "^5.97.1",
 		"webpack-cli": "^5.0.2",
 		"webpack-dev-server": "^4.15.0"
 	},
@@ -78,8 +79,8 @@
 	},
 	"dependencies": {
 		"clsx": "^2.1.0",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1"
 	},
 	"lint-staged": {
 		"*.{css,scss}": "npm run stylelint:fix",
